http-proxy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3128
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  protocol: "%PROTOCOL%"
                  status: "%RESPONSE_CODE%"
                  method: "%REQ(:METHOD)%"
                  message: "%LOCAL_REPLY_BODY%"
                  resp_code_details: "%RESPONSE_CODE_DETAILS%"
                  conn_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                  duration: "%DURATION%"
                  response_flags: "%RESPONSE_FLAGS_LONG%"
                  upstream_host_name: "%UPSTREAM_HOST_NAME%"
                  local_reply_body: "%LOCAL_REPLY_BODY%"
                  host: "%REQ(HOST)%"
                  user_agent: "%REQ(USER-AGENT)%"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: allow_all
              domains: ["*"]
              routes:
              - match:
                  connect_matcher: {}
                route:
                  cluster: dynamic_forward_proxy_cluster
                  upgrade_configs:
                    - upgrade_type: CONNECT
                      connect_config: {}

  clusters:
  - name: dynamic_forward_proxy_cluster
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_dns_cache
          dns_lookup_family: V4_ONLY
